--- a/homepage.html
+++ b/homepage.html
@@ -10,7 +10,7 @@
     SurveySync
     <div>
         <p>
-            
+            Survey will be conducted here.
         </p>
     </div>
 </body>
