--- a/give_survey.html
+++ b/give_survey.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <link ref="" css="">
     <title>Give Survey</title>
 </head>
 <body>
