--- a/log_in.html
+++ b/log_in.html
@@ -3,14 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <link rel="stylesheet" href="log_in.css">
     <title>Log In</title>
 </head>
 <body>
-    <div>
-        <h1>Log In</h1>
-        <form>
-            
-        </form>
-    </div>
+    <script src="log_in.js"></script>
+    <form>
+        <fieldset>
+            <legend id="legend1">Log In</legend>
+            <p> Enter Username </p>
+            <input type="text" id="" value="" placeholder="Enter Username">
+            <p> Enter Password </p>
+            <input type="password" id="" value="" placeholder="Enter Your Password">
+            <br>
+            <button id="button1" type="submit"><strong>Log in your account</strong></button>
+            <!-- <button type="reset">Reset</button> -->
+            <br>
+            <p id="p1">Forgot your password ?</p>
+        </fieldset>
+    </form>
 </body>
 </html>
