--- a/homepage.html
+++ b/homepage.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <link rel="stylesheet" href="homepage.css">
     <title>Homepage</title>
 </head>
 <body>
-    
-</body>
+    <div>
 </html>
