--- a/sign_up.html
+++ b/sign_up.html
@@ -10,6 +10,38 @@
     <title>Sign In</title>
 </head>
 <body>
-    
+    <form>
+        <fieldset>
+            <legend>Sign Up</legend>
+            <p>Enter Your Name</p>
+            <input id="" value="" type="text" placeholder="First Name">
+            <input id="" value="" type="text" placeholder="Middle Name">
+            <input id="" value="" type="text" placeholder="Last Name">
+            <br>
+            <p>Enter Date of Birth</p>
+            <input id="" value="" type="date">
+            <br>
+            <p>Enter Nationality</p>
+            <input id="" value="" type="text" placeholder="Country">
+            <br>
+            <p>Enter your city name</p>
+            <input id="" value="" type="text" placeholder="City">
+            <br>
+            <label for="">Enter your Gender</label><br>
+            <select name="Gender">
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+                <option value="others">Other</option>
+            </select><br>
+            <p>Enter Username</p>
+            <input value="" id="" placeholder="Username"><br>
+            <p>Enter Password</p>
+            <input value="" id="" placeholder="Enter Your Password"><br>
+            <input value="" id="" placeholder="Confirm Your Password"><br>
+            <label for="submit">Submit the Information :</label><br>
+            <button type="submit" id="submit1">SUBMIT</button>
+            <button type="reset" id="reset1">RESET</button>
+        </fieldset>
+    </form>
 </body>
 </html>
