--- a/sign_up.html
+++ b/sign_up.html
@@ -10,9 +10,9 @@
     <title>Sign In</title>
 </head>
 <body>
-    <form>
+    <form id="f1">
         <fieldset>
-            <legend>Sign Up</legend>
+            <legend id="l1">Sign Up</legend>
             <p>Enter Your Name</p>
             <input id="" value="" type="text" placeholder="First Name">
             <input id="" value="" type="text" placeholder="Middle Name">
@@ -26,8 +26,8 @@
             <br>
             <p>Enter your city name</p>
             <input id="" value="" type="text" placeholder="City">
-            <br>
-            <label for="">Enter your Gender</label><br>
+            <br><br>
+            <label for="">Enter your Gender</label>
             <select name="Gender">
                 <option value="male">Male</option>
                 <option value="female">Female</option>
@@ -38,9 +38,12 @@
             <p>Enter Password</p>
             <input value="" id="" placeholder="Enter Your Password"><br>
             <input value="" id="" placeholder="Confirm Your Password"><br>
-            <label for="submit">Submit the Information :</label><br>
+            <br>
+            <center>
+            <label for="submit" id="submit2">Submit the Information :</label><br>
             <button type="submit" id="submit1">SUBMIT</button>
             <button type="reset" id="reset1">RESET</button>
+            </center>
         </fieldset>
     </form>
 </body>
