--- a/give_survey.html
+++ b/give_survey.html
@@ -6,10 +6,10 @@
     <meta name="robots" content="">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <link ref="" css="">
+    <link rel="stylesheet" href="give_survey.css">
     <title>Give Survey</title>
 </head>
 <body>
-    
+    <script src="give_survey.js"></script>
 </body>
 </html>
