--- a/homepage.html
+++ b/homepage.html
@@ -11,5 +11,7 @@
     <title>Homepage</title>
 </head>
 <body>
-    <div>
+    <script src="homepage.js"></script>
+    <div></div>
+</body>
 </html>
