--- a/homepage.html
+++ b/homepage.html
@@ -13,5 +13,14 @@
 <body>
     <script src="homepage.js"></script>
     <div></div>
+    <div id = "footerdiv">
+    <footer id = ftr1>
+        <br>
+        © 2023 SurveySync Developement. All rights reserved. All trademarks are property of their respective owners in the India and other countries.<br />
+        Other brands or product names are the trademarks of their respective owners.  <br />
+        VAT included in all prices where applicable.   Privacy Policy   |   Legal   |   Steam Subscriber Agreement   |   Refunds   |   Cookies<br />
+        <br>
+    </footer>
+</div>
 </body>
 </html>
