--- a/homepage.html
+++ b/homepage.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <script src="homepage.js"></script>
-    <div></div>
+    <div>This is Homepage and an empty div.</div>
     <div id = "footerdiv">
     <footer id = ftr1>
         <br>
