--- a/log_in.html
+++ b/log_in.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <script src="log_in.js"></script>
-    <form>
+    <form id = "f1">
         <fieldset>
             <legend id="legend1">Log In</legend>
             <p> Enter Username </p>
