--- a/sign_up.html
+++ b/sign_up.html
@@ -19,6 +19,9 @@
             <input id="" value="" type="text" placeholder="Middle Name">
             <input id="" value="" type="text" placeholder="Last Name">
             <br>
+            <p>Enter your email-ID</p>
+            <input id="" value="" type="email" placeholder="email-ID">
+            <br />
             <p>Enter Date of Birth</p>
             <input id="" value="" type="date">
             <br>
