--- a/governmental_ngo.html
+++ b/governmental_ngo.html
@@ -11,6 +11,7 @@
     <title>Government and NGO</title>
 </head>
 <body>
+    GOVERNMENTAL
     <script src="give_survey.js"></script>
 </body>
 </html>
