--- a/homepage.html
+++ b/homepage.html
@@ -12,7 +12,40 @@
 </head>
 <body>
     <script src="homepage.js"></script>
-    <div>This is Homepage and an empty div.</div>
+    <div id="divv">
+            <nav>
+            <label for="explore">EXPLORE</label>
+            <select name="EXPLORE" id="explore">
+                <option value=""><a href="./governmental_ngo.html" target="_self">GOVERNMENTAL</a></option>
+                <option value=""><a href="./personality_psychology.html" target="_self">PERSONALITY AND PSYCHOLOGY</a></option>
+                <option value=""><a href="./health.html" target="_self"></a>HEALTH</option>
+                <option value=""><a href="./environment.html" target="_self">ENVIRONMENT</a></option>
+                <option value=""><a href="./census.html" target="_self"></a>CENCUS</option>
+                <option value=""><a href="./exit_poll.html" target="_self"></a>EXIT POLL</option>
+            </select>
+            <a href="faq_help.html">FAQ AND HELP</a>
+            <a href="privacy_policy.html">PRIVACY POLICY</a>
+            <a href="about_contact.html">ABOUT US</a>
+            <a href="terms_conditions.html">TERMS AND CONDITONS</a>
+            <a href="feedback.html">FEEDBACK</a>
+            <a href="log_in.html" style="border: 2px solid black; margin-left: 85%;">Log In</a>
+            <a href="signin.html" style="border: 2px solid black;">Sign Up</a>
+        </nav>
+    </div>
+    <hr>
+    <hr>
+    <div id="dv1">
+        <a href="create_a_survey.html"><img src="./images/Screenshot (853).png" width="24%"alt="create_a_survey"></a>
+        <a href="give_survey.html"><img src="./images/Screenshot (853).png" width="24%" alt="give_survey"></a>
+        <a href="census.html"><img src="./images/Screenshot (853).png" width="24%" alt="census"></a>
+        <a href="environment.html"><img src="./images/Screenshot (853).png" width="24%" alt="environment"></a>
+        <br>
+        <a href="health.html"><img src="./images/Screenshot (853).png" width="24%" alt="health"></a>
+        <a href="personality_psychology.html"><img src="./images/Screenshot (853).png" width="24%" alt="personality_psychology"></a>
+        <a href="governmental_ngo.html"><img src="./images/Screenshot (853).png" width="24%" alt="governmental_ngo"></a>
+        <a href="exit_poll.html"><img src="./images/Screenshot (853).png" width="24%" alt="exit_poll"></a>
+        <br>
+    </div>
     <div id = "footerdiv">
     <footer id = ftr1>
         <br>
