--- a/log_in.html
+++ b/log_in.html
@@ -14,15 +14,18 @@
     <script src="log_in.js"></script>
     <form id = "f1">
         <fieldset>
+            
             <legend id="legend1">Log In</legend>
+            <div>  
             <p> Enter Username </p>
             <input type="text" id="" value="" placeholder="Enter Username">
+            </div>
+            <div>
             <p> Enter Password </p>
             <input type="password" id="" value="" placeholder="Enter Your Password">
-            <br>
+            </div>
             <button id="button1" type="submit"><strong>Log in your account</strong></button>
             <!-- <button type="reset">Reset</button> -->
-            <br>
             <p id="p1">Forgot your password ?</p>
         </fieldset>
     </form>
