--- a/sign_up.html
+++ b/sign_up.html
@@ -14,40 +14,52 @@
     <form id="f1">
         <fieldset>
             <legend id="l1">Sign Up</legend>
+            <div>
             <p>Enter Your Name</p>
             <input id="" value="" type="text" placeholder="First Name">
             <input id="" value="" type="text" placeholder="Middle Name">
             <input id="" value="" type="text" placeholder="Last Name">
-            <br>
+            </div>
+            <div>
             <p>Enter your email-ID</p>
             <input id="" value="" type="email" placeholder="email-ID">
-            <br />
+            </div>
+            <div>
             <p>Enter Date of Birth</p>
             <input id="" value="" type="date">
-            <br>
+            </div>
+            <div>
             <p>Enter Nationality</p>
             <input id="" value="" type="text" placeholder="Country">
-            <br>
+            </div>
+            <div>
             <p>Enter your city name</p>
             <input id="" value="" type="text" placeholder="City">
-            <br><br>
+            </div>
+            <div>
             <label for="">Enter your Gender</label>
             <select name="Gender">
                 <option value="male">Male</option>
                 <option value="female">Female</option>
                 <option value="others">Other</option>
-            </select><br>
+            </select>
+            </div>
+            <div>
             <p>Enter Username</p>
-            <input value="" id="" placeholder="Username"><br>
+            <input value="" id="" placeholder="Username">
+            </div>
+            <div>
             <p>Enter Password</p>
             <input value="" id="" placeholder="Enter Your Password"><br>
             <input value="" id="" placeholder="Confirm Your Password"><br>
-            <br>
+            </div>
+            <div>
             <center>
             <label for="submit" id="submit2">Submit the Information :</label><br>
             <button type="submit" id="submit1">SUBMIT</button>
             <button type="reset" id="reset1">RESET</button>
             </center>
+            </div>
         </fieldset>
     </form>
 </body>
