--- a/signin.html
+++ b/signin.html
@@ -11,7 +11,7 @@
 <body class="align">
 
   <div class="grid">
-    <h2 class ="text--center">Sign In to SurveySync</h2>
+    <h2 class ="text--center">Log In to SurveySync</h2>
 
     <form action="https://httpbin.org/post" method="POST" class="form login">
 
@@ -27,12 +27,12 @@
       </div>
 
       <div class="form__field">
-        <input type="submit" value="Sign In">
+        <input type="submit" value="Log In">
       </div>
 
     </form>
 
-    <p class="text--center">Not a member? <a href="#">Sign up now</a> <svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/icons.svg#arrow-right"></use></svg> <br>
+    <p class="text--center">Not a member? <a href="./sign_up.html">Sign up now</a> <svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/icons.svg#arrow-right"></use></svg> <br>
       <a href="forgot_password.html" >Forgot Password?</a> </p>
     <!--<p class="text--center"><a href="forgot_password.html" >Forgot Password?</a></p> -->
 
