--- a/homepage.html
+++ b/homepage.html
@@ -8,52 +8,94 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="robots" content="INDEX,FOLLOW">
     <link rel="stylesheet" href="homepage.css">
+    <!-- <img src="./images/survey.png" alt=""> -->
     <title>Homepage</title>
 </head>
 <body>
     <script src="homepage.js"></script>
-    <div id="divv">
-            <nav>
-            <label for="explore">EXPLORE</label>
-            <select name="EXPLORE" id="explore">
-                <option value=""><a href="./governmental_ngo.html" target="_self">GOVERNMENTAL</a></option>
-                <option value=""><a href="./personality_psychology.html" target="_self">PERSONALITY AND PSYCHOLOGY</a></option>
-                <option value=""><a href="./health.html" target="_self"></a>HEALTH</option>
-                <option value=""><a href="./environment.html" target="_self">ENVIRONMENT</a></option>
-                <option value=""><a href="./census.html" target="_self"></a>CENCUS</option>
-                <option value=""><a href="./exit_poll.html" target="_self"></a>EXIT POLL</option>
+        <div id="nav-bar" class="nav-bar-class">
+        <div id="logo-and-explore">
+            <span id="logo">
+                <img id="logo-png" src="./images/survey-png.png" alt="website logo">
+            </span>
+            <!-- <nav> -->
+            <!-- <img src="" alt=""> -->
+            <!-- <span> -->
+            <span class="explore">
+            <label class="explore" for="explore">EXPLORE</label>
+            <select name="EXPLORE"class="explore">
+                <option value="./governmental_ngo.html" ><a href="./governmental_ngo.html" target="_self">GOVERNMENTAL</a></option>
+                <option value="./personality_psychology.html"><a href="./personality_psychology.html" target="_self">PERSONALITY AND PSYCHOLOGY</a></option>
+                <option value="./health.html"><a href="./health.html" target="_self"></a>HEALTH</option>
+                <option value="./environment.html"><a href="./environment.html" target="_self">ENVIRONMENT</a></option>
+                <option value="./census.html"><a href="./census.html" target="_self"></a>CENCUS</option>
+                <option value="./exit_poll.html"><a href="./exit_poll.html" target="_self"></a>EXIT POLL</option>
             </select>
+            </span>
+            </div>
+            <div id="nav-bar-options" class="nav-bar-class">
             <a href="faq_help.html">FAQ AND HELP</a>
             <a href="privacy_policy.html">PRIVACY POLICY</a>
             <a href="about_contact.html">ABOUT US</a>
             <a href="terms_conditions.html">TERMS AND CONDITONS</a>
             <a href="feedback.html">FEEDBACK</a>
-            <a href="log_in.html" style="border: 2px solid black; margin-left: 85%;">Log In</a>
-            <a href="signin.html" style="border: 2px solid black;">Sign Up</a>
-        </nav>
-    </div>
+            </div>
+            <div id="log-in" class="nav-bar-class">
+                <a href="signin.html" style="border: 2px solid black; margin-left: 92%; margin-top:15%;">Log In</a>
+            </div>
+            <div id="sign-up" class="nav-bar-class">
+            <a href="sign_up.html" style="border: 2px solid black;">Sign Up</a>
+            </div>
+            <!-- </span> -->
+        <!-- </nav> -->
+        </div>
+        <!-- </div> -->
     <hr>
-    <hr>
-    <div id="dv1">
+    <div id="sliding-pix"></div>
+    <div id="content">
+    <div id="option-bar"></div>
+    <!-- <hr> -->
+    <div id="all-services">
+        <div id="first-row">
+        <span id="first-span" class="services">
         <a href="create_a_survey.html"><img src="./images/Screenshot (853).png" width="24%"alt="create_a_survey"></a>
-        <a href="give_survey.html"><img src="./images/Screenshot (853).png" width="24%" alt="give_survey"></a>
+        </span>
+        <span id="second-span" class="services">
+        <a href="give_survey.html"><img src="./images/Screenshot (853).png" width="24%" alt="give_survey"></a></span>
+        <span id="third-span" class="services">
         <a href="census.html"><img src="./images/Screenshot (853).png" width="24%" alt="census"></a>
-        <a href="environment.html"><img src="./images/Screenshot (853).png" width="24%" alt="environment"></a>
-        <br>
+        </span>
+        <span id="fourth-span" class="services">
+        <a href="environment.html"><img src="./images/Screenshot (853).png" width="24%" alt="environment"></a></span>
+        </div>
+        <div id="second-row">
+        <span id="fifth-span" class="services">
         <a href="health.html"><img src="./images/Screenshot (853).png" width="24%" alt="health"></a>
-        <a href="personality_psychology.html"><img src="./images/Screenshot (853).png" width="24%" alt="personality_psychology"></a>
-        <a href="governmental_ngo.html"><img src="./images/Screenshot (853).png" width="24%" alt="governmental_ngo"></a>
+        </span>
+        <span id="sixth-span" class="services">
+        <a href="personality_psychology.html"><img src="./images/Screenshot (853).png" width="24%" alt="personality_psychology"></a></span>
+        <span id="seventh-span" class="services">
+        <a href="governmental_ngo.html"><img src="./images/Screenshot (853).png" width="24%" alt="governmental_ngo"></a></span>
+        <span id="eighth-span" class="services">
         <a href="exit_poll.html"><img src="./images/Screenshot (853).png" width="24%" alt="exit_poll"></a>
-        <br>
+        </span>
     </div>
-    <div id = "footerdiv">
-    <footer id = ftr1>
-        <br>
-        © 2023 SurveySync Developement. All rights reserved. All trademarks are property of their respective owners in the India and other countries.<br />
-        Other brands or product names are the trademarks of their respective owners.  <br />
-        VAT included in all prices where applicable.   Privacy Policy   |   Legal   |   Steam Subscriber Agreement   |   Refunds   |   Cookies<br />
-        <br>
+    </div>
+    </div>
+    
+    <div id = "footer-div">
+    <footer id = footer>
+        <div id="rights">
+        © 2023 SurveySync Developement. All rights reserved. All trademarks are property of their respective owners in the India and other countries.
+        </div>
+        <div id="trademarks">
+        Other brands or product names are the trademarks of their respective owners.
+        VAT included in all prices where applicable.
+        </div>
+        <div id="footer-options">
+            Privacy Policy   |   Legal   |   Steam Subscriber Agreement   |   Refunds   |   Cookies
+        </div>
     </footer>
-</div>
+    </div>
 </body>
 </html>
