--- a/forget_password.html
+++ b/forget_password.html
@@ -11,6 +11,22 @@
     <title>Forget Password</title>
 </head>
 <body>
+    <form action="" id="forgot-password">
+        <fieldset>
+            <legend>Forgot Your Password</legend>
+            <div>
+                <p>Enter Your Email ID</p>
+                <input type="email" placeholder="Enter Your Email ID">
+            </div>
+            <div>
+                <p>Enter the OTP</p>
+                <input type="number" name="" id="" placeholder="Enter the OTP">
+            </div>
+            <div>
+                <button type="submit" id="submit-button">SUBMIT</button>
+            </div>
+        </fieldset>
+    </form>
     <script src="forget_password.js"></script>
 </body>
 </html>
