--- a/census.html
+++ b/census.html
@@ -11,6 +11,46 @@
     <title>Census</title>
 </head>
 <body>
+    <div id="nav-bar" class="nav-bar-class">
+        <div id="logo-and-explore">
+            <div id="logo">
+                <img id="logo-png" src="./images/survey-png.png" alt="website logo">
+            </div>
+            <!-- <nav> -->
+            <!-- <img src="" alt=""> -->
+            <!-- <span> -->
+            <div class="explore">
+                <label class="explore" for="explore">EXPLORE</label>
+                <select name="EXPLORE" class="explore">
+                            <option value="./governmental_ngo.html" ><a href="./governmental_ngo.html" target="_self">GOVERNMENTAL</a></option>
+                            <option value="./personality_psychology.html"><a href="./personality_psychology.html" target="_self">PERSONALITY AND PSYCHOLOGY</a></option>
+                            <option value="./health.html"><a href="./health.html" target="_self"></a>HEALTH</option>
+                            <option value="./environment.html"><a href="./environment.html" target="_self">ENVIRONMENT</a></option>
+                            <option value="./census.html"><a href="./census.html" target="_self"></a>CENCUS</option>
+                            <option value="./exit_poll.html"><a href="./exit_poll.html" target="_self"></a>EXIT POLL</option>
+                </select>
+            </div>
+        </div>
+        
+        <div id="nav-bar-options" class="nav-bar-class">
+                <a href="faq_help.html">FAQ AND HELP</a>
+                <a href="privacy_policy.html">PRIVACY POLICY</a>
+                <a href="about_contact.html">ABOUT US</a>
+                <a href="terms_conditions.html">TERMS AND CONDITONS</a>
+                <a href="feedback.html">FEEDBACK</a>
+        </div>
+        <div class="log-and-sign">
+            <div id="log-in" class="nav-bar-class">
+                <a href="signin.html" style="border: 2px solid black;">Log In</a>
+            </div>
+            <div id="sign-up" class="nav-bar-class">
+                <a href="sign_up.html" style="border: 2px solid black;">Sign Up</a>
+            </div>
+        </div>
+            <!-- </span> -->
+            <!-- </nav> -->
+        
+    </div>
     <script src="cencus.js"></script>
 </body>
 </html>
