--- a/give_survey.html
+++ b/give_survey.html
@@ -12,13 +12,13 @@
 <body>
     <div id="nav-bar" class="nav-bar-class">
         <div id="logo-and-explore">
-            <div id="logo">
+            <div id="logo" style="display: inline-block;">
                 <img id="logo-png" src="./images/survey-png.png" alt="website logo">
             </div>
             <!-- <nav> -->
             <!-- <img src="" alt=""> -->
             <!-- <span> -->
-            <div class="explore">
+            <div class="explore" style="display: inline-block;">
                 <label class="explore" for="explore">EXPLORE</label>
                 <select name="EXPLORE" class="explore">
                             <option value="./governmental_ngo.html" ><a href="./governmental_ngo.html" target="_self">GOVERNMENTAL</a></option>
