--- a/exit_poll.html
+++ b/exit_poll.html
@@ -11,46 +11,65 @@
     <title>Exit Poll</title>
 </head>
 <body>
-    <div id="nav-bar" class="nav-bar-class">
-        <div id="logo-and-explore">
-            <div id="logo">
-                <img id="logo-png" src="./images/survey-png.png" alt="website logo">
-            </div>
-            <!-- <nav> -->
-            <!-- <img src="" alt=""> -->
-            <!-- <span> -->
-            <div class="explore">
-                <label class="explore" for="explore">EXPLORE</label>
-                <select name="EXPLORE" class="explore">
-                            <option value="./governmental_ngo.html" ><a href="./governmental_ngo.html" target="_self">GOVERNMENTAL</a></option>
-                            <option value="./personality_psychology.html"><a href="./personality_psychology.html" target="_self">PERSONALITY AND PSYCHOLOGY</a></option>
-                            <option value="./health.html"><a href="./health.html" target="_self"></a>HEALTH</option>
-                            <option value="./environment.html"><a href="./environment.html" target="_self">ENVIRONMENT</a></option>
-                            <option value="./census.html"><a href="./census.html" target="_self"></a>CENCUS</option>
-                            <option value="./exit_poll.html"><a href="./exit_poll.html" target="_self"></a>EXIT POLL</option>
-                </select>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">    
+<div class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <div class="navbar-header">
+                        <button class="navbar-toggle" data-target="#mobile_menu" data-toggle="collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+                        <a href="#" class="navbar-brand">SurveySync</a>
+                    </div>
+
+                    <div class="navbar-collapse collapse" id="mobile_menu">
+                        <ul class="nav navbar-nav">
+                            <li class="active"><a href="#">Home</a></li>
+                            <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">EXPLORE <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="health.html">HEALTH</a></li>
+                                    <li><a href="governmental_ngo.html">GOVERNMENTAL</a></li>
+                                    <li><a href="census.html">CENCUS</a></li>
+                                    <li><a href="environment.html">ENVIRONMENT</a></li>
+                                    <li><a href="personality_psychology.html">PSYCHOLOGY</a></li>
+                                    <li><a href="exit_poll.html">EXIT POLL</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="feedback.html">Feedback</a></li>
+                            <li><a href="faq_help.html">FAQ and Help</a></li>
+                            <!-- <li><a href="edit_profile.html"></a></li> -->
+                            <li><a href="about_contact.html">Contact Us</a></li>
+                            <li><a href="privacy_policy.html">Privacy Policy</a></li>
+                        </ul>
+                        <ul class="nav navbar-nav">
+                            <li>
+                                <form action="" class="navbar-form">
+                                    <div class="form-group">
+                                        <div class="input-group">
+                                            <input type="search" name="search" id="" placeholder="Search Anything Here..." class="form-control">
+                                            <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+                                        </div>
+                                    </div>
+                                </form>
+                            </li>
+                        </ul>
+
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="my_profile.html"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
+                            <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-log-in"></span> Login / Sign Up <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="log_in.html">Login</a></li>
+                                    <li><a href="signin.html">Sign Up</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
-        
-        <div id="nav-bar-options" class="nav-bar-class">
-                <a href="faq_help.html">FAQ AND HELP</a>
-                <a href="privacy_policy.html">PRIVACY POLICY</a>
-                <a href="about_contact.html">ABOUT US</a>
-                <a href="terms_conditions.html">TERMS AND CONDITONS</a>
-                <a href="feedback.html">FEEDBACK</a>
-        </div>
-        <div class="log-and-sign">
-            <div id="log-in" class="nav-bar-class">
-                <a href="signin.html" style="border: 2px solid black;">Log In</a>
-            </div>
-            <div id="sign-up" class="nav-bar-class">
-                <a href="sign_up.html" style="border: 2px solid black;">Sign Up</a>
-            </div>
-        </div>
-            <!-- </span> -->
-            <!-- </nav> -->
-        
     </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <h1>Election Exit Poll</h1>
     <script src="exit_poll.js"></script>
 </body>
