--- a/feedback.html
+++ b/feedback.html
@@ -10,6 +10,64 @@
     <title>Feedback</title>
 </head>
 <body>
-    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">    
+<div class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <div class="navbar-header">
+                        <button class="navbar-toggle" data-target="#mobile_menu" data-toggle="collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+                        <a href="#" class="navbar-brand">SurveySync</a>
+                    </div>
+
+                    <div class="navbar-collapse collapse" id="mobile_menu">
+                        <ul class="nav navbar-nav">
+                            <li class="active"><a href="#">Home</a></li>
+                            <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">EXPLORE <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="health.html">HEALTH</a></li>
+                                    <li><a href="governmental_ngo.html">GOVERNMENTAL</a></li>
+                                    <li><a href="census.html">CENCUS</a></li>
+                                    <li><a href="environment.html">ENVIRONMENT</a></li>
+                                    <li><a href="personality_psychology.html">PSYCHOLOGY</a></li>
+                                    <li><a href="exit_poll.html">EXIT POLL</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="feedback.html">Feedback</a></li>
+                            <li><a href="faq_help.html">FAQ and Help</a></li>
+                            <!-- <li><a href="edit_profile.html"></a></li> -->
+                            <li><a href="about_contact.html">Contact Us</a></li>
+                            <li><a href="privacy_policy.html">Privacy Policy</a></li>
+                        </ul>
+                        <ul class="nav navbar-nav">
+                            <li>
+                                <form action="" class="navbar-form">
+                                    <div class="form-group">
+                                        <div class="input-group">
+                                            <input type="search" name="search" id="" placeholder="Search Anything Here..." class="form-control">
+                                            <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+                                        </div>
+                                    </div>
+                                </form>
+                            </li>
+                        </ul>
+
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="my_profile.html"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
+                            <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-log-in"></span> Login / Sign Up <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="log_in.html">Login</a></li>
+                                    <li><a href="signin.html">Sign Up</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
