--- a/homepage.html
+++ b/homepage.html
@@ -14,15 +14,15 @@
 </head>
 
 <body>
-    <div id="nav-bar" class="nav-bar-class">
-        <div id="logo-and-explore">
+    <!-- <div id="nav-bar" class="nav-bar-class"> -->
+        <!-- <div id="logo-and-explore">
             <div id="logo">
                 <img id="logo-png" src="./images/survey-png.png" alt="website logo">
-            </div>
+            </div> -->
             <!-- <nav> -->
             <!-- <img src="" alt=""> -->
             <!-- <span> -->
-            <div class="explore">
+            <!-- <div class="explore">
                 <label class="explore" for="explore">EXPLORE</label>
                 <select name="EXPLORE" class="explore">
                             <option value="./governmental_ngo.html" ><a href="./governmental_ngo.html" target="_self">GOVERNMENTAL</a></option>
@@ -50,12 +50,118 @@
                 <a href="sign_up.html" style="border: 2px solid black;">Sign Up</a>
             </div>
         </div>
-            <!-- </span> -->
-            <!-- </nav> -->
         
+    -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">    
+<div class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <div class="navbar-header">
+                        <button class="navbar-toggle" data-target="#mobile_menu" data-toggle="collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+                        <a href="#" class="navbar-brand">SurveySync</a>
+                    </div>
+
+                    <div class="navbar-collapse collapse" id="mobile_menu">
+                        <ul class="nav navbar-nav">
+                            <li class="active"><a href="#">Home</a></li>
+                            <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">EXPLORE <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="health.html">HEALTH</a></li>
+                                    <li><a href="governmental_ngo.html">GOVERNMENTAL</a></li>
+                                    <li><a href="census.html">CENCUS</a></li>
+                                    <li><a href="environment.html">ENVIRONMENT</a></li>
+                                    <li><a href="personality_psychology.html">PSYCHOLOGY</a></li>
+                                    <li><a href="exit_poll.html">EXIT POLL</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="feedback.html">Feedback</a></li>
+                            <li><a href="faq_help.html">FAQ and Help</a></li>
+                            <!-- <li><a href="edit_profile.html"></a></li> -->
+                            <li><a href="about_contact.html">Contact Us</a></li>
+                            <li><a href="privacy_policy.html">Privacy Policy</a></li>
+                        </ul>
+                        <ul class="nav navbar-nav">
+                            <li>
+                                <form action="" class="navbar-form">
+                                    <div class="form-group">
+                                        <div class="input-group">
+                                            <input type="search" name="search" id="" placeholder="Search Anything Here..." class="form-control">
+                                            <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+                                        </div>
+                                    </div>
+                                </form>
+                            </li>
+                        </ul>
+
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="my_profile.html"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
+                            <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-log-in"></span> Login / Sign Up <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="log_in.html">Login</a></li>
+                                    <li><a href="signin.html">Sign Up</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <hr>
-    <div id="sliding-pix"></div>
+    <!-- <div id="sliding-pix">
+        <div class="wrapper">
+            <img id="slider-img" src="./demo images/393821.jpg" alt="">
+            <img id="slider-img" src="./demo images/394511.jpg" alt="">
+            <img id="slider-img" src="./demo images/408539.jpg" alt="">
+            <img id="slider-img" src="./demo images/519792 new.jpg" alt="">
+        </div>
+    </div> -->
+    <!-- <div class="pictureSlider poster-main" data-setting='{
+        "width":1000,
+        "height":270,
+        "posterWidth":640,
+        "posterHeight":270,
+        "scale":0.8,
+        "autoPlay":true,
+        "delay":2000,
+        "speed":300
+        }'>
+<div class="poster-btn poster-prev-btn"></div>
+<ul class="poster-list">
+<li class="poster-item"><a href="#"><img src="https://unsplash.it/640/270?image=1014" width="100%" height="100%"></a></li>
+<li class="poster-item"><a href="#"><img src="https://unsplash.it/640/270?image=1013" width="100%" height="100%"></a></li>
+<li class="poster-item"><a href="#"><img src="https://unsplash.it/640/270?image=1012" width="100%" height="100%"></a></li>
+<li class="poster-item"><a href="#"><img src="https://unsplash.it/640/270?image=1011" width="100%" height="100%"></a></li>
+<li class="poster-item"><a href="#"><img src="https://unsplash.it/640/270?image=1010" width="100%" height="100%"></a></li>
+<li class="poster-item"><a href="#"><img src="https://unsplash.it/640/270?image=1009" width="100%" height="100%"></a></li>
+<li class="poster-item"><a href="#"><img src="https://unsplash.it/640/270?image=1008" width="100%" height="100%"></a></li>
+<li class="poster-item"><a href="#"><img src="https://unsplash.it/640/270?image=1009" width="100%" height="100%"></a></li>
+<li class="poster-item"><a href="#"><img src="https://unsplash.it/640/270?image=1006" width="100%" height="100%"></a></li>
+</ul>
+<div class="poster-btn poster-next-btn"></div>
+-->
+<div id="container">
+    <div id="imageSlider">
+        <figure>
+        <img  src="./images/carlos-muza-hpjSkU2UYSU-unsplash.jpg" />
+        <img  src="./images/justin-morgan-VxLhYXuLQN8-unsplash.jpg" />
+        <img  src="./images/nasa-Q1p7bh3SHj8-unsplash.jpg" />
+        <!-- <img  src="./images/scott-graham-5fNmWej4tAA-unsplash.jpg">
+        <img  src="./images/ux-indonesia-8mikJ83LmSQ-unsplash.jpg">
+        <img  src="./images/stephen-dawson-qwtCeJ5cLYs-unsplash.jpg" />
+        <img  src="./images/isaac-smith-6EnTPvPPL6I-unsplash.jpg" />         -->
+        <!-- <i class="fas fa-arrow-alt-circle-left"></i>
+        <i class="fas fa-arrow-alt-circle-right"></i> -->
+        </figure>
+    </div>
+
+</div>
+<br>
+<br>
     <div id="content">
             <div id="option-bar"></div>
             <!-- <hr> -->
@@ -68,18 +174,18 @@
                             <a href="give_survey.html"><img src="./images/Screenshot (853).png" width="24%" alt="give_survey"></a>
                     </div>
                     <div id="third-div" class="services">
-                                <a href="census.html"><img src="./images/Screenshot (853).png" width="24%" alt="census"></a>
+                                <a href="census.html"><img src="./images/icons/Screenshot (965).png" width="24%" alt="census"></a>
                     </div>
                     <div id="fourth-div" class="services">
-                                <a href="environment.html"><img src="./images/Screenshot (853).png" width="24%" alt="environment"></a>
+                                <a href="environment.html"><img src="./images/icons/Screenshot (966).png" width="24%" alt="environment"></a>
                     </div>
                 </div>
                 <div id="second-row">
                     <div id="fifth-div" class="services">
-                                    <a href="health.html"><img src="./images/Screenshot (853).png" width="24%" alt="health"></a>
+                                    <a href="health.html"><img src="./images/icons/Screenshot (967).png" width="24%" alt="health"></a>
                     </div>
                     <div id="sixth-div" class="services">
-                                    <a href="personality_psychology.html"><img src="./images/Screenshot (853).png" width="24%" alt="personality_psychology"></a>
+                                    <a href="personality_psychology.html"><img src="./images/icons/Screenshot (968).png" width="24%" alt="personality_psychology"></a>
                     </div>
                     <div id="seventh-div" class="services">
                                         <a href="governmental_ngo.html"><img src="./images/Screenshot (853).png" width="24%" alt="governmental_ngo"></a>
@@ -90,7 +196,7 @@
                 </div>
             </div>
         </div>
-
+        <hr>
         <div id="footer-div">
             <footer id= footer>
                 <div id="rights">
