--- a/homepage.html
+++ b/homepage.html
@@ -147,9 +147,9 @@
 <div id="container">
     <div id="imageSlider">
         <figure>
-        <img  src="./images/carlos-muza-hpjSkU2UYSU-unsplash.jpg" />
-        <img  src="./images/justin-morgan-VxLhYXuLQN8-unsplash.jpg" />
-        <img  src="./images/nasa-Q1p7bh3SHj8-unsplash.jpg" />
+        <img  src="./images/1.jpg" />
+        <img  src="./images/2.jpg" />
+        <img  src="./images/3.jpg" />
         <!-- <img  src="./images/scott-graham-5fNmWej4tAA-unsplash.jpg">
         <img  src="./images/ux-indonesia-8mikJ83LmSQ-unsplash.jpg">
         <img  src="./images/stephen-dawson-qwtCeJ5cLYs-unsplash.jpg" />
@@ -168,30 +168,30 @@
             <div id="all-services">
                 <div id="first-row">
                     <div id="first-div" class="services">
-                            <a href="create_a_survey.html"><img src="./images/Screenshot (853).png" width="24%"alt="create_a_survey"></a>
+                            <a href="create_a_survey.html" target="_self"><img src="./images/icons/create survey.jpg" width="24%"alt="create_a_survey"></a>
                     </div>
                     <div id="second-div" class="services">
-                            <a href="give_survey.html"><img src="./images/Screenshot (853).png" width="24%" alt="give_survey"></a>
+                            <a href="give_survey.html" target="_self"><img src="./images/icons/givesurvey.jpg" width="24%" alt="give_survey"></a>
                     </div>
                     <div id="third-div" class="services">
-                                <a href="census.html"><img src="./images/icons/Screenshot (965).png" width="24%" alt="census"></a>
+                                <a href="census.html" target="_self"><img src="./images/icons/census.jpg" width="24%" alt="census"></a>
                     </div>
                     <div id="fourth-div" class="services">
-                                <a href="environment.html"><img src="./images/icons/Screenshot (966).png" width="24%" alt="environment"></a>
+                                <a href="environment.html" target="_self"><img src="./images/icons/environment.jpg" width="24%" alt="environment"></a>
                     </div>
                 </div>
                 <div id="second-row">
                     <div id="fifth-div" class="services">
-                                    <a href="health.html"><img src="./images/icons/Screenshot (967).png" width="24%" alt="health"></a>
+                                    <a href="health.html" target="_self"><img src="./images/icons/health.jpg" width="24%" alt="health"></a>
                     </div>
                     <div id="sixth-div" class="services">
-                                    <a href="personality_psychology.html"><img src="./images/icons/Screenshot (968).png" width="24%" alt="personality_psychology"></a>
+                                    <a href="personality_psychology.html" target="_self"><img src="./images/personality.jpg" width="24%" alt="personality_psychology"></a>
                     </div>
                     <div id="seventh-div" class="services">
-                                        <a href="governmental_ngo.html"><img src="./images/Screenshot (853).png" width="24%" alt="governmental_ngo"></a>
+                                        <a href="governmental_ngo.html" target="_self"><img src="./images/icons/government.jpg" width="24%" alt="governmental_ngo"></a>
                     </div>
                     <div id="eighth-div" class="services">
-                                            <a href="exit_poll.html"><img src="./images/Screenshot (853).png" width="24%" alt="exit_poll"></a>
+                                            <a href="exit_poll.html" target="_self"><img src="./images/icons/exitpoll.jpg" width="24%" alt="exit_poll"></a>
                     </div>
                 </div>
             </div>
@@ -211,6 +211,10 @@
             </footer>
         </div>
         <script src="homepage.js"></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
