--- a/index.html
+++ b/index.html
@@ -7,10 +7,53 @@
         <meta name="description" content>
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="robots" content="INDEX,FOLLOW">
-        <link rel="stylesheet" href="homepage.css">
-        <title>Document</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="utilities.css">
+        <title>SurveySync</title>
     </head>
     <body>
-
+        <nav class="navbar">
+            <div class="nav-1">
+                <div class="logo">
+                    <div>
+                        <img src="./images/survey-png.png" id="nav-logo" alt>
+                    </div>
+                    <div>SurveySync</div>
+                </div>
+                <div class="nav-headings">
+                    <p class="nav-item">CREATE SURVEY</p>
+                    <p class="nav-item">GIVE SURVEY</p>
+                    <p class="nav-item">DISCUSSIONS</p>
+                    <p class="nav-item">ABOUT US</p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="nav-2">
+                <div class="nav-business">
+                    <p class="nav-item">SUPPORT</p>
+                    <p class="nav-item">FOR BUSINESS</p>
+                </div>
+                <div class="signup">
+                    <div><img src="./svg/search.svg" alt="search"></div>
+                    <div><img src="./svg/language.svg" alt="language"></div>
+                    <div><img src="./svg/user.svg" alt="user"></div>
+                </div>
+            </div>
+        </nav>
+        <div class="black-line">
+        </div>
+        <section class="main-top">
+            <aside class="left"></aside>
+            <section class="right"></section>
+        </section>
+        <div class="black-line">
+        </div>
+        <section class="main"></section>
+        <div class="black-line">
+        </div>
+        <footer class="footer">
+            <div class="footer-left"></div>
+            <div class="footer-right"></div>
+        </footer>
     </body>
 </html>
