--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="signup">
                     <div><img src="./svg/search.svg" alt="search"></div>
                     <div><img src="./svg/language.svg" alt="language"></div>
-                    <div><img src="./svg/user.svg" alt="user"></div>
+                    <div><a href="sign_up.html"><img src="./svg/user.svg" alt="user"></a></div>
                 </div>
             </div>
         </nav>
