--- a/sign_up.html
+++ b/sign_up.html
@@ -4,8 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
+    <link rel="stylesheet" href="sign_up.css">
+    <link rel="stylesheet" href="utilities.css">
 </head>
-<body background="./images/sign-up-back.jpg" style="background-repeat: no-repeat;">
-    
+<body background="./images/background.png" style="background-repeat: no-repeat;">
+    <section class="main">
+        <section class="left">
+            <div class="top">
+                <div><img src="./images/survey-png.png" alt="logo" id="logo-register"></div>
+                <div id="website-name"><a id="a1" href="index.html">SurveySync</a></div>
+            </div>
+            <div class="bottom">
+                <div>Join <span>8 Million</span> Businesses That Trust SurveySync to Surpercharge their Businesses</div>
+                <div class="bottom-grid">
+                    <div><img src="./svg/check.svg" alt="">Various Survey Methods</div>
+                    <div><img src="./svg/check.svg" alt="">Easy Intergration</div>
+                    <div><img src="./svg/check.svg" alt="">Powerful Dashboard</div>
+                </div>
+            </div>
+        </section>
+        <section class="right">
+            <div class="white-box">
+                <div class="right-header">
+                    <div><img src="./images/survey-png.png" alt="logo" id="logo-register"></div>
+                    <div>Welcome to <span>SurveySync</span></div>
+                    <div id="get-started">Get Started with your email or phone number</div>
+                </div>
+                <div class="email">
+                    <div>
+                        <input type="email" placeholder="&nbsp;&nbsp;Enter your email or phone number">
+                    </div>
+                    <div>
+                        <div id="country-text">Country <img src="./svg/info.svg" alt="info-icon"></div>
+                        <div><select name="country" id="country"><option value="India">India (+91)</option></select></div>
+                    </div>
+                </div>
+                <div class="button">
+                    <button class="button-1"><a id="a2" href="sign_up2.html">Continue</a></button>
+                    <p>- or -</p>
+                    <button class="google"><a id="a3" href="sign_up2.html"><p>Continue with Google</p></a><img src="./svg/google.svg" alt="google"></button>
+                </div>
+                <div class="right-footer"><p>By continuing you agree to our <span>privacy policy </span> and <span>terms of use</span></p></div>
+            </div>
+        </section>
+    </section>
 </body>
 </html>
