--- a/index.html
+++ b/index.html
@@ -43,8 +43,25 @@
         <div class="black-line">
         </div>
         <section class="main-top">
-            <aside class="left"></aside>
-            <section class="right"></section>
+            <aside class="left">
+                <div id="left-div-1">Create online surveys efforlessly</div>
+                <div id="left-div-2">You and your participants deserve the best! Get results quickly and easily with our free survey creator. </div>
+                <div class="left-sign-up">
+                    <div><input type="email" name="email" id="left-email" placeholder="&nbsp;&nbsp;Email Address"></div>
+                    <div><button>
+                        <a href="sign_up2.html"><img id="right-arrow" src="./svg/right-arrow.svg" alt="arrow"><span>Sign up Free</span></a>
+                    </button></div>
+                </div>
+                <div id="tagline">Free for life. No credit card required!</div>
+                <div class="ratings">
+                    <div><span>4.6&nbsp;</span><img src="./svg/star.svg" alt="star"> on G2</div>
+                    <div><span>4.7&nbsp;</span><img src="./svg/star.svg" alt="star"> on Capterra</div>
+                </div>
+
+            </aside>
+            <section class="right">
+                <img id="right-img" src="./images/cos-screen-image-desktop.png" alt="right-img">
+            </section>
         </section>
         <div class="black-line">
         </div>
