--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 <div class="signup">
                     <div><img src="./svg/search.svg" alt="search"></div>
                     <div><img src="./svg/language.svg" alt="language"></div>
-                    <div><a href="sign_up.html"><img src="./svg/user.svg" alt="user"></a></div>
+                    <div><a href="sign_up.html"><img src="./svg/user.svg"
+                                alt="user"></a></div>
                 </div>
             </div>
         </nav>
@@ -45,27 +46,131 @@
         <section class="main-top">
             <aside class="left">
                 <div id="left-div-1">Create online surveys efforlessly</div>
-                <div id="left-div-2">You and your participants deserve the best! Get results quickly and easily with our free survey creator. </div>
-                <div class="left-sign-up">
-                    <div><input type="email" name="email" id="left-email" placeholder="&nbsp;&nbsp;Email Address"></div>
-                    <div><button>
-                        <a href="sign_up2.html"><img id="right-arrow" src="./svg/right-arrow.svg" alt="arrow"><span>Sign up Free</span></a>
-                    </button></div>
+                <div id="left-div-2">You and your participants deserve the best!
+                    Get results quickly and easily with our free survey creator.
                 </div>
-                <div id="tagline">Free for life. No credit card required!</div>
+                <div class="left-sign-up">
+                    <div><input type="email" name="email" class="left-email"
+                            placeholder="&nbsp;&nbsp;Email Address"></div>
+                    <div><button>
+                            <a href="sign_up2.html"><img class="right-arrow"
+                                    src="./svg/right-arrow.svg"
+                                    alt="arrow"><span>Sign up Free</span></a>
+                        </button></div>
+                </div>
+                <div class="tagline">Free for life. No credit card
+                    required!</div>
                 <div class="ratings">
-                    <div><span>4.6&nbsp;</span><img src="./svg/star.svg" alt="star"> on G2</div>
-                    <div><span>4.7&nbsp;</span><img src="./svg/star.svg" alt="star"> on Capterra</div>
+                    <div><span>4.6&nbsp;</span><img src="./svg/star.svg"
+                            alt="star"> on G2</div>
+                    <div><span>4.7&nbsp;</span><img src="./svg/star.svg"
+                            alt="star"> on Capterra</div>
                 </div>
 
             </aside>
             <section class="right">
-                <img id="right-img" src="./images/cos-screen-image-desktop.png" alt="right-img">
+                <img id="right-img" src="./images/cos-screen-image-desktop.png"
+                    alt="right-img">
             </section>
         </section>
         <div class="black-line">
         </div>
-        <section class="main"></section>
+        <section class="main">
+            <div class="main-tagline"><p id="p1">Unlock insights and drive
+                    decisions with
+                    the</p><p id="p2">#1 online survey creator</p></div>
+            <div class="features-container">
+                <div><img src="./svg/wand-icon.svg" alt><h3>Create surveys with
+                        ease</h3>
+                    <ul>
+                        <li>
+                            AI-assisted survey creation
+
+                        </li>
+                        <li>Ready-to-use survey templates, questions, and answer
+                            sets</li>
+                        <li>Extensive customization options</li>
+                        <li>Advanced logic</li>
+                        <li>Pre-fill known answers</li>
+                    </ul>
+                </div>
+                <div><img src="./svg/add_reaction.svg" alt><h3>Boost participant
+                        engagement</h3>
+                    <ul>
+                        <li>Seamless experience for participants
+
+                        </li>
+                        <li>Responsive design for mobile and tablet</li>
+                        <li>Personalized email invitations</li>
+                        <li>Intelligent reminders</li>
+                        <li>508 compliant</li>
+                    </ul>
+                </div>
+                <div><img src="./svg/search_insights.svg" alt><h3>Get answers on
+                        the go</h3>
+                    <ul>
+                        <li>Omnichannel distribution
+
+                        </li>
+                        <li>Dynamic one-click reports</li>
+                        <li>Mobile app to create, distribute, and view results
+                            on the move</li>
+                        <li>Presentation-ready PowerPoint exports</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="login-again">
+                <h1>Create online survey now</h1>
+                <p>Our intuitive platform is just the tool you need to create
+                    surveys that deliver results. Ready to explore?</p>
+                <div>
+                    <div class="left-sign-up">
+                        <div><input type="email" name="email" class="left-email"
+                                placeholder="&nbsp;&nbsp;Email Address"></div>
+                        <div><button>
+                                <a href="sign_up2.html"><img class="right-arrow"
+                                        src="./svg/right-arrow.svg"
+                                        alt="arrow"><span>Sign up
+                                        Free</span></a>
+                            </button></div>
+                    </div>
+                    <div class="tagline" id="tagline2">Free for life. No credit
+                        card
+                        required!</div>
+                </div>
+            </div>
+            <section class="facts">
+                <div><img src="./svg/globe.svg"
+                        alt="globe"><p><span>100,000+</span> ccustomers in 96
+                        countries</p></div>
+                <div><img src="./svg/handshake.svg"
+                        alt="handshake"><p><span>79%</span> left a competitor
+                        for us</p></div>
+                <div><img src="./svg/trophy.svg" alt="trophy"><p><span>A+</span>
+                        BBB ratings</p></div>
+                <div><img src="./svg/shield.svg"
+                        alt="shield"><p><span>100%</span> EU safe Harbour
+                        Complaint</p></div>
+            </section>
+            <section class="review">
+                <div><h2>“Effective, user-friendly”</h2></div>
+                <div><p>“The insights are truthful, effective, user-friendly.
+                        Employees and customers are more open because they see
+                        we care! They see their voices matter.”</p></div>
+                <div id="div3"><div><img src="./images/elon musk.jfif"
+                            alt="elon_musk"></div><div><p id="elon">Elon
+                            Musk</p><p id="tesla">Founder Tesla</p></div></div>
+            </section>
+            <section class="recommendation">
+                <h1>Why choose SurveySync?</h1>
+                <div class="recommendation-grid">
+                    <div><h2></h2><img src="" alt=""></div>
+                    <div><h2></h2><img src="" alt=""></div>
+                    <div><h2></h2><img src="" alt=""></div>
+                    <div><h2></h2><img src="" alt=""></div>
+                </div>
+            </section>
+        </section>
         <div class="black-line">
         </div>
         <footer class="footer">
