--- a/index.html
+++ b/index.html
@@ -164,18 +164,76 @@
             <section class="recommendation">
                 <h1>Why choose SurveySync?</h1>
                 <div class="recommendation-grid">
-                    <div><h2></h2><img src="" alt=""></div>
-                    <div><h2></h2><img src="" alt=""></div>
-                    <div><h2></h2><img src="" alt=""></div>
-                    <div><h2></h2><img src="" alt=""></div>
+                    <div><div><img src="./svg/dollar.svg" alt="dollar-sign"><h2>Cost</h2></div><p>SurveySync offers a cost-effective solution without sacrificing features or quality. Our flexible pricing plans accommodate businesses of all sizes, ensuring you get the best value for your investment. SurveySync provides a premium survey tool and analytics at a fraction of the cost of other providers, making it a smart choice for budget-conscious organizations.</p></div>
+                    <div><div><img src="./svg/check-colored.svg" alt="check"><h2>Most complete survey tool</h2></div><p>SurveySync is the most complete survey tool on the market. Whether you need to conduct employee engagement surveys, customer satisfaction surveys, or market research, SurveySync has you covered. Our comprehensive suite of features includes customizable templates, advanced reporting, real-time analytics, and seamless integration with other tools. Whatever your survey needs, SurveySync provides a one-stop solution.</p></div>
+                    <div><div><img src="./svg/headset.svg" alt="headset"><h2>Support</h2></div><p>We pride ourselves on providing exceptional customer support. Our dedicated team of experts is available 24/7 via chat, email, and phone to assist with any questions or issues. From onboarding to advanced survey customization, we ensure you have the support you need every step of the way. Our commitment to customer satisfaction sets us apart, ensuring a seamless and productive experience.</p></div>
+                    <div><div><img src="./svg/shield.svg" alt="shield"><h2>Security</h2></div><p>We understand the importance of data security, and SurveySync is built with robust measures to protect your information. Our platform complies with industry standards and regulations such as ISO 27001, GDPR, and HIPAA, ensuring your data is safe and secure. With SurveySync, you can confidently collect and store sensitive data, knowing that we prioritize your privacy and security above all else.</p></div>
                 </div>
             </section>
+            <section class="review">
+                <div><h2>“Highly recommended.”</h2></div>
+                <div><p>“Amazing support, robust enterprise-grade survey platform...”</p></div>
+                <div id="div3-2"><div><img src="./images/sundar-pichai.jfif"
+                            alt="sundar-pichai"></div><div><p id="sundar-pichai">Sundar
+                            Pichai</p><p id="alphabet">CEO Alphabet</p></div></div>
+            </section>
+            <section class="brands">
+                <h1>Join the strongest brands on the planet.</h1>
+                <img src="./images/Screenshot (1527).png" alt="brands">
+            </section>
         </section>
-        <div class="black-line">
-        </div>
         <footer class="footer">
-            <div class="footer-left"></div>
-            <div class="footer-right"></div>
+            <div class="footer-left">
+                <h3> QUICK LINKS</h3>
+                <div><a href="#">Online Survey Tool (DIY)</a></div>
+                <div><a href="#">Enterprise Survey Software</a></div>
+                <div><a href="#">Customer Experience (CX) Platform</a></div>
+                <div><a href="#">Employee Experience (EX) Platform</a></div>
+                <div><a href="#">Customer Feedback Management</a></div>
+                <div><a href="#">Automation and Integrations</a></div>
+                <div><a href="#">Managed Services</a></div>
+            </div>
+            <div class="footer-right">
+                <div class="company"><h3>COMPANY</h3>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Career</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Newsroom</a></li>
+                    <li><a href="#">Our Customers</a></li>
+                    <li><a href="#">Sitemap</a></li>
+                </ul></div>
+                <div class="resources"><h3>RESOURCES</h3>
+                <ul>
+                    <li><a href="#">Help</a></li>
+                    <li><a href="#">Training Videos</a></li>
+                    <li><a href="#">Sample Surveys</a></li>
+                    <li><a href="#">Webinars</a></li>
+                    <li><a href="#">Request a Demo</a></li>
+                    <li><a href="#">Quiz Maker</a></li>
+                </ul></div>
+                <div class="contact">
+                    <h3>CONTACT</h3>
+                    <div class="contact-info">
+                        <div><img src="./svg/location.svg" alt="location"><p>245, IT Hub, Agra Bombay Road, Indore, India</p></div>
+                        <div id="phone"><img src="./svg/phone.svg" alt="phone"><p>+91 1800 462 9898</p></div>
+                        <div id="message"><img src="./svg/message.svg" alt="message"><a href="#">support@surveysync.com</a></div>
+                    </div>
+                    <div class="footer-logos">
+                        <img src="./svg/linkedin.svg" alt="linkedin">
+                        <img src="./svg/instagram.svg" alt="instagram">
+                        <img src="./svg/youtube.svg" alt="youtube">
+                        <img src="./svg/x.svg" alt="x">
+                        <img src="./svg/facebook.svg" alt="facebook">
+                    </div>
+                    
+                 </div>
+            </div>
         </footer>
+        <div class="footer-last">
+            <div id="footer-1"><p>Copyright 2024 SurveySync. All rights reserved.</p></div>
+            <div id="footer-2">
+                <p>Privacy &nbsp;|&nbsp; PolicyTerms of Service &nbsp;|&nbsp; Anti-Spam Policy &nbsp;|&nbsp; Data & Security</p></div>
+        </div>   
     </body>
 </html>
