--- a/sign_up2.html
+++ b/sign_up2.html
@@ -35,7 +35,7 @@
                         <input type="password" placeholder="&nbsp;&nbsp;Enter your password">
                     </div>
                     <div class="button">
-                        <button class="button-2"><a id="a5" href="homepage.html">Continue</a></button>
+                        <button class="button-2"><a id="a5" href="pricing.html">Continue</a></button>
                     </div>
                 </div>
                 <div class="right-footer"><p>By continuing you agree to our <span>privacy policy </span> and <span>terms of use</span></p></div>
