--- a/sign_up.html
+++ b/sign_up.html
@@ -42,7 +42,7 @@
                 <div class="button">
                     <button class="button-1"><a id="a2" href="sign_up2.html">Continue</a></button>
                     <p>- or -</p>
-                    <button class="google"><a id="a3" href="sign_up2.html"><p>Continue with Google</p></a><img src="./svg/google.svg" alt="google"></button>
+                    <button class="google"><a id="a3" href="pricing.html"><p>Continue with Google</p></a><img src="./svg/google.svg" alt="google"></button>
                 </div>
                 <div class="right-footer"><p>By continuing you agree to our <span>privacy policy </span> and <span>terms of use</span></p></div>
             </div>
